AmicarDP/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Web</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Asignación</fullName>
        </values>
        <values>
            <fullName>Contactabilidad</fullName>
        </values>
        <values>
            <fullName>Conversión</fullName>
        </values>
        <values>
            <fullName>Evaluación</fullName>
        </values>
        <values>
            <fullName>Nuevo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Otorgamiento</fullName>
        </values>
        <values>
            <fullName>Prospección</fullName>
        </values>
        <values>
            <fullName>Validación</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Asiste__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asiste?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bloques_Ultimo_Horario__c</fullName>
        <label>Bloques Ultimo Horario</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comunas__c</fullName>
        <label>Comuna</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Regi_n__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Comuna</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmar_Visita__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmar Visita</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Edad_Simulacion__c</fullName>
        <formula>IF (MONTH(fecha_nacimiento__c) &lt; MONTH(TODAY()),(YEAR(TODAY()) - YEAR(fecha_nacimiento__c)),((YEAR(TODAY()) - YEAR(fecha_nacimiento__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edad Simulación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Envio_Correo_Agenda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envío Correo Agenda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Envio_SMS_Agenda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envío SMS Agenda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estado_contacto_telefonico__c</fullName>
        <label>Estado contacto telefonico</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Contactado</fullName>
                </value>
                <value>
                    <fullName>Datos Errónes</fullName>
                </value>
                <value>
                    <fullName>Contactado - Agenda Vista</fullName>
                </value>
                <value>
                    <fullName>Contactado - Agenda Pendiente</fullName>
                </value>
                <value>
                    <fullName>Contactado - No interesado</fullName>
                </value>
                <value>
                    <fullName>Contactado - Referencia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_de_Evaluaci_n_Motor__c</fullName>
        <label>Detalle Evaluación Comercial</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Agenda__c</fullName>
        <label>Fecha Agenda</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filtro_Canal__c</fullName>
        <description>Filtro para canales</description>
        <formula>IF(ISPICKVAL (channel__c, &quot;amicar&quot;),true, IF(ISPICKVAL (channel__c, &quot;Destacame&quot;),true, IF (ISPICKVAL (channel__c, &quot;MERCADOLIBRE&quot;), true, false)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filtro Canal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filtro_Marketing_Cloud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filtro Marketing Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geoposition__c</fullName>
        <label>Geoposición</label>
        <scale>14</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Horario__c</fullName>
        <label>Horario</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ingresa_codigo_ID_Credito__c</fullName>
        <label>Ingresa código (ID-Crédito)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Llamame__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Llámame</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locales__c</fullName>
        <label>Locales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Locales</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marca_agendada__c</fullName>
        <label>Marca agendada</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marcas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modelo__c</fullName>
        <label>Modelo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Motivo_Desistido__c</fullName>
        <description>Campo en el cuál se indica el motivo del desestimiento.</description>
        <inlineHelpText>Solo editable cuando el Lead fue desistido</inlineHelpText>
        <label>Motivo Desistido</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Modelo/versión sin Stock</fullName>
                </value>
                <value>
                    <fullName>Se va a la competencia</fullName>
                </value>
                <value>
                    <fullName>Ya no está interesado(a)</fullName>
                </value>
                <value>
                    <fullName>Compra con recursos propios</fullName>
                </value>
                <value>
                    <fullName>No compra vehículo en el corto plazo</fullName>
                </value>
                <value>
                    <fullName>Rechazo en validación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre_Operaciones__c</fullName>
        <label>Nombre Operaciones</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_intentos__c</fullName>
        <label>Numero de intentos</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quiero_Agendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quiero Agendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regi_n__c</fullName>
        <label>Región</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Regi_n</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registra_Agenda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registra Agenda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Respuesta_EF_OK__c</fullName>
        <formula>NOT(ISPICKVAL(respuesta_ef_credito__c, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Respuesta EF OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temperatura__c</fullName>
        <label>Temperatura</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Producto__c</fullName>
        <label>Tipo de Producto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opción inteligente</fullName>
                </value>
                <value>
                    <fullName>Crédito convencional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_Publicacion__c</fullName>
        <label>URL Publicación</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL_Storage__c</fullName>
        <label>URL Storage</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>arriendo_dividendo_cliente__c</fullName>
        <label>Arriendo/Dividendo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>carBrandDescription__c</fullName>
        <label>Marca</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marcas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>carBrandId__c</fullName>
        <label>Marca del Vehiculo número</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>carModelDescription__c</fullName>
        <label>Modelo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>carModelId__c</fullName>
        <label>Modelo Numero</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>carPrice__c</fullName>
        <label>Valor Vehículo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>carVersion__c</fullName>
        <label>Versión</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>carYear__c</fullName>
        <label>Año Vehículo</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cargo_cliente__c</fullName>
        <label>Cargo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>channelId__c</fullName>
        <label>Canal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>channel__c</fullName>
        <label>Nombre Canal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Autopia</fullName>
                </value>
                <value>
                    <fullName>Automarket</fullName>
                </value>
                <value>
                    <fullName>Destacame</fullName>
                </value>
                <value>
                    <fullName>amicar</fullName>
                </value>
                <value>
                    <fullName>Dercousados</fullName>
                </value>
                <value>
                    <fullName>Autofaro</fullName>
                </value>
                <value>
                    <fullName>MERCADOLIBRE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>checklist_ef_respuesta_dep__c</fullName>
        <label>Checklist Respuesta EF Tra. Dependiente</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>respuesta_ef_credito__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12 Primeras Cuotas con Cheque</fullName>
                </value>
                <value>
                    <fullName>Aclaracion de Antecedentes de la Conyuge</fullName>
                </value>
                <value>
                    <fullName>Acredita participacion en sociedades</fullName>
                </value>
                <value>
                    <fullName>Acreditar Antiguedad Laboral</fullName>
                </value>
                <value>
                    <fullName>Acreditar hijos en comun</fullName>
                </value>
                <value>
                    <fullName>Acreditar otros ingresos</fullName>
                </value>
                <value>
                    <fullName>Acreditar patrimonio (deposito-B.raiz-Vehiculos)</fullName>
                </value>
                <value>
                    <fullName>Acreditar titulo profesional</fullName>
                </value>
                <value>
                    <fullName>Aumento del Plazo del Credito</fullName>
                </value>
                <value>
                    <fullName>Aumento de Pie</fullName>
                </value>
                <value>
                    <fullName>Avaluo de la propiedad</fullName>
                </value>
                <value>
                    <fullName>Carga Financiera</fullName>
                </value>
                <value>
                    <fullName>Carnet de Identidad</fullName>
                </value>
                <value>
                    <fullName>Cartola de Cuenta Corriente</fullName>
                </value>
                <value>
                    <fullName>CAV</fullName>
                </value>
                <value>
                    <fullName>Cav de vehiculo o vehiculos sin prenda</fullName>
                </value>
                <value>
                    <fullName>Certificado de AFP</fullName>
                </value>
                <value>
                    <fullName>Certificado de AFP 12 meses</fullName>
                </value>
                <value>
                    <fullName>Certificado de Antiguedad Laboral</fullName>
                </value>
                <value>
                    <fullName>Certificado de Matrimonio</fullName>
                </value>
                <value>
                    <fullName>Codeudor Solidario</fullName>
                </value>
                <value>
                    <fullName>Comportamiento Comercial Conyuge-Pareja</fullName>
                </value>
                <value>
                    <fullName>Comportamiento Comercial Empleador</fullName>
                </value>
                <value>
                    <fullName>Comportamiento Comercial Solicitante</fullName>
                </value>
                <value>
                    <fullName>Contrato de Trabajo</fullName>
                </value>
                <value>
                    <fullName>Conyuge con Mal Comportamiento Comercial</fullName>
                </value>
                <value>
                    <fullName>Cuenta que Acredite su Domicilio</fullName>
                </value>
                <value>
                    <fullName>Cuota Sobrepasa su Capacidad de Pago</fullName>
                </value>
                <value>
                    <fullName>Deuda Castigada en el Sistema</fullName>
                </value>
                <value>
                    <fullName>Deuda Vencida en el Sistema</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>checklist_ef_respuesta_inde__c</fullName>
        <label>Checklist Respuesta EF Tra Independiente</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>respuesta_ef_credito__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12 Primeras Cuotas con Cheque</fullName>
                </value>
                <value>
                    <fullName>12 Ultimos IVAS</fullName>
                </value>
                <value>
                    <fullName>Aclaracion de Antecedentes de la Conyuge</fullName>
                </value>
                <value>
                    <fullName>Acredita participacion en sociedades</fullName>
                </value>
                <value>
                    <fullName>Acreditar Antiguedad Laboral</fullName>
                </value>
                <value>
                    <fullName>Acreditar Bien Raiz</fullName>
                </value>
                <value>
                    <fullName>Acreditar hijos en comun</fullName>
                </value>
                <value>
                    <fullName>Acreditar otros ingresos</fullName>
                </value>
                <value>
                    <fullName>Acreditar patrimonio depositos</fullName>
                </value>
                <value>
                    <fullName>Acreditar Vehiculo</fullName>
                </value>
                <value>
                    <fullName>Antigüedad en la operacion</fullName>
                </value>
                <value>
                    <fullName>Aumento del Plazo del Credito</fullName>
                </value>
                <value>
                    <fullName>Aumento de Pie</fullName>
                </value>
                <value>
                    <fullName>Avaluo de la propiedad</fullName>
                </value>
                <value>
                    <fullName>Bajo nivel de ventas</fullName>
                </value>
                <value>
                    <fullName>Boletas de los Ultimos 6 Meses</fullName>
                </value>
                <value>
                    <fullName>Capital</fullName>
                </value>
                <value>
                    <fullName>Carga Financiera</fullName>
                </value>
                <value>
                    <fullName>CARNe IDENTIDAD</fullName>
                </value>
                <value>
                    <fullName>Carnet del Representante Legal</fullName>
                </value>
                <value>
                    <fullName>Carpeta Tributaria</fullName>
                </value>
                <value>
                    <fullName>Cartola cuenta corriente</fullName>
                </value>
                <value>
                    <fullName>Cartola de Cuenta Corriente</fullName>
                </value>
                <value>
                    <fullName>Cav de vehiculo o vehiculos sin prenda</fullName>
                </value>
                <value>
                    <fullName>Certificado de AFP 12 meses</fullName>
                </value>
                <value>
                    <fullName>Certificado de Titulo (Profesional)</fullName>
                </value>
                <value>
                    <fullName>Codeudor Solidario</fullName>
                </value>
                <value>
                    <fullName>Comportamiento Comercial Conyuge-Pareja</fullName>
                </value>
                <value>
                    <fullName>Comportamiento Comercial Empleador</fullName>
                </value>
                <value>
                    <fullName>Comportamiento Comercial Solicitante</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>comuna_cliente__c</fullName>
        <label>Comuna Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>region_cliente__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Comunas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>comuna_empleador__c</fullName>
        <label>Comuna Empleador</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>region_empleador__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Comunas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>dia_pago_sueldo_cliente__c</fullName>
        <label>Día Pago Sueldo</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>direccion_empleador__c</fullName>
        <label>Dirección Empleador</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>direccion_particular__c</fullName>
        <inlineHelpText>Dirección del cliente</inlineHelpText>
        <label>Dirección Particular</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>direccion_referencia__c</fullName>
        <label>Dirección</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>documentacion_ok__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Se activa por Integración para cuando los documentos ya están cargados.</description>
        <label>Documentos OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>documentos_url__c</fullName>
        <label>URL Documentos</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>downPaymentPercentage__c</fullName>
        <label>Pie %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>downPayment__c</fullName>
        <label>Monto Pie</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>emision_carta_aprobacion__c</fullName>
        <label>Emisión Carta de Aprobación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>engine__c</fullName>
        <label>Motor de Evaluación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amicar.cl</fullName>
                    <default>true</default>
                    <label>Amicar.cl</label>
                </value>
                <value>
                    <fullName>Autopia</fullName>
                </value>
                <value>
                    <fullName>DercoUsados</fullName>
                </value>
                <value>
                    <fullName>Destacame</fullName>
                </value>
                <value>
                    <fullName>Platanus</fullName>
                </value>
                <value>
                    <fullName>AutoMarket</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>estado_civil__c</fullName>
        <label>Estado Civil</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Soltero</fullName>
                </value>
                <value>
                    <fullName>Casado</fullName>
                </value>
                <value>
                    <fullName>Separado Legalmente</fullName>
                </value>
                <value>
                    <fullName>Separado de Hecho</fullName>
                </value>
                <value>
                    <fullName>Viudo</fullName>
                </value>
                <value>
                    <fullName>En pareja</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>estado_otorgamiento__c</fullName>
        <label>Estado Otorgamiento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sin otorgar</fullName>
                    <default>true</default>
                    <label>Sin otorgar</label>
                </value>
                <value>
                    <fullName>Otorgado</fullName>
                </value>
                <value>
                    <fullName>Adjudicado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>estudios_cliente__c</fullName>
        <label>Nivel de Estudios</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primarios</fullName>
                </value>
                <value>
                    <fullName>Secundarios</fullName>
                </value>
                <value>
                    <fullName>Superiores</fullName>
                </value>
                <value>
                    <fullName>Postgrado</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Magister</fullName>
                </value>
                <value>
                    <fullName>Superior no Terminado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>evaluationResult__c</fullName>
        <label>Estado Evaluación Comercial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equifax Rechaza</fullName>
                </value>
                <value>
                    <fullName>Equifax Aprueba</fullName>
                </value>
                <value>
                    <fullName>Autofin</fullName>
                </value>
                <value>
                    <fullName>Tanner</fullName>
                </value>
                <value>
                    <fullName>Sin respuesta</fullName>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>RECHAZADO</fullName>
                    <label>Rechazado</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fecha_adjudicacion__c</fullName>
        <label>Fecha Adjudicación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fecha_ing_empleo_cliente__c</fullName>
        <label>Fecha Ing Empleo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fecha_nacimiento__c</fullName>
        <description>Fecha de nacimiento del Lead</description>
        <inlineHelpText>Fecha de nacimiento del cliente</inlineHelpText>
        <label>Fecha Nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>financiera_aprueba__c</fullName>
        <label>Entidad Financiera</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TANNER</fullName>
                </value>
                <value>
                    <fullName>BANCO FALABELLA</fullName>
                </value>
                <value>
                    <fullName>SCOTIABANK</fullName>
                </value>
                <value>
                    <fullName>FORUM</fullName>
                </value>
                <value>
                    <fullName>MARUBENI CREDIT</fullName>
                </value>
                <value>
                    <fullName>AUTOFIN</fullName>
                </value>
                <value>
                    <fullName>COTIZADOR AMICAR</fullName>
                </value>
                <value>
                    <fullName>MITSUI</fullName>
                </value>
                <value>
                    <fullName>SANTANDER CONSUMER</fullName>
                </value>
                <value>
                    <fullName>EUROCAPITAL</fullName>
                </value>
                <value>
                    <fullName>MUNDO CRÉDITO</fullName>
                </value>
                <value>
                    <fullName>NUEVO CAPITAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fono_empleador__c</fullName>
        <label>Fono Empleador</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>fono_referencia__c</fullName>
        <label>Teléfono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>formulario_url__c</fullName>
        <label>URL Formulario</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>genero_cliente__c</fullName>
        <label>Género</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Masculino</fullName>
                </value>
                <value>
                    <fullName>Femenino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>